# tiny-kv

./: Cargo.toml  README.md  abi.proto
examples/: client.rs  dummy_server.rs  server.rs
src/: error.rs  lib.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs
